Fixed Searchbar overflowing effect

--- a/StylesOut.css
+++ b/StylesOut.css
@@ -595,9 +595,9 @@ header {
   .search-container2 {
     display: flex;
     align-items: center;
-    margin-right: 2rem;
+    margin-right: 1rem;
     margin-bottom: 0.5rem;
-    padding: inherit;
+    padding-right: 1rem;
     width: 100%;
     border: 0.5px solid #fcd4c1;
     border-radius: 20px;
@@ -611,12 +611,15 @@ header {
   }
 
   .search-container2 input[type="text"] {
-    margin-left: 0.2rem;
     padding: 0.5rem;
     height: inherit;
     background-color: transparent;
     border: none;
-    width: 30rem;
+    width: 95%;
+  }
+
+  #searchform {
+    width: 100%;
   }
 
   .search-container2 input[type="submit"] {
